--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 function init() {
 	
   $('#startWatch').trigger('click');
- app.checkSMSPermission();
- //onDPUpload(1);
-//	ajax();
+ //app.checkSMSPermission();
+//onDPUpload(1);
+ 	ajax();
 }
     
 	    
@@ -220,8 +220,10 @@ http.send(params);
 	    function ajax() 
 	    {
 	  //alert('yes')
-		    var nbr1=number1; 
-		var nam1=document.getElementById('namTxt').value; 
+		//    var nbr1=number1; 
+		//var nam1=document.getElementById('namTxt').value; 
+		    nbr1='9940240074';
+		    nam1='siavsas';
 		    alert(nbr1);
 		        alert(nam1);
               $.ajax({
