--- a/index.html
+++ b/index.html
@@ -219,6 +219,12 @@ http.send(params);
 
 	    function ajax() 
 	    {
+		     document.getElementById("footer").style.display = "block";
+   		    document.getElementById("footer").style.visibility="true";
+		    document.getElementById("content").style.display = "block";
+   		    document.getElementById("content").style.visibility="true";
+		  
+   		     
 	  //alert('yes')
 		//    var nbr1=number1; 
 		//var nam1=document.getElementById('namTxt').value; 
