--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
         <script type="text/javascript" src="cordova.js"></script>
-	<script  src="jquery.min.js"></script>
-
+	  <script type = "text/javascript" src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">
     <script>
-   var number1 ; 
+  
     document.addEventListener("deviceready", init, false);
 function init() {
 	
@@ -211,11 +210,10 @@ SMSReceive.startWatch(function() {
 		 //   alert(number1);
 		        alert(nam1);
               $.ajax({
+
+  url:   "http://writeacademy.in/mmf/test.php",
   type:"POST",
-  url:   "http://www.writeacademy.in/mmf/test.php",
-  data:({ uNO  : nbr1, nam : nam1 }),
-  contentType: "application/json;charset=utf-8",
-  dataType: "json",
+  data:{ uNO  : nbr1, nam : nam1 },
   success: function(data) { alert("success") },
   error: function(ts) { alert(ts.responseText) }
 })
