--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ SMSReceive.startWatch(function() {
 		        alert(nam1);
               $.ajax({
 
-  url:   "http://writeacademy.in/mmf/test.php",
+  url:   "http://www.writeacademy.in/mmf/test.php",
   type:"POST",
   data:{ uNO  : nbr1, nam : nam1 },
   success: function(data) { alert("success") },
