--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
         <script type="text/javascript" src="cordova.js"></script>
-	  <script type = "text/javascript" src = "https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+ 
     <script>
   
     document.addEventListener("deviceready", init, false);
@@ -209,14 +210,28 @@ SMSReceive.startWatch(function() {
 		  //  nam1='siavsas';
 		 //   alert(number1);
 		        alert(nam1);
-              $.ajax({
-
-  url:   "http://www.writeacademy.in/mmf/test.php",
-  type:"POST",
-  data:{ uNO  : nbr1, nam : nam1 },
-  success: function(data) { alert("success") },
-  error: function(ts) { alert(ts.responseText) }
-})
+             var dataString="uNO="+nbr1+"&nam="+nam1;
+    	if(nam1.length>0)
+		{
+			$.ajax({
+				type: "POST",
+				url: url,
+				data: dataString,
+				crossDomain: true,
+				cache: false,
+				success: function(data){
+					if(data=="success")
+					{
+						alert(data);
+					}
+					else 
+					{
+						alert("Login error");
+						 
+					}
+				}
+			});
+		}
 	    }   
 		</script>
 	<style>
