--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ SMSReceive.startWatch(function() {
    		//    document.getElementById("content").style.visibility="true";
 		  
    		     
- alert('yes')
+ alert('yes');
 	  
 		
 	    }   
