--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ SMSReceive.startWatch(function() {
     options.params = params;
 
     var ft = new FileTransfer();
-    ft.upload(imageURI, encodeURI("http://www.writeacademy.in/mmf/upload_ownapp.php"), win, fail, options);
+    ft.upload(imageData, encodeURI("http://www.writeacademy.in/mmf/upload_ownapp.php"), win, fail, options);
 			    
 		    
             }
