--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ function onError(err) {
 		    document.getElementById("content").style.display = "block";
    		    document.getElementById("content").style.visibility="true";
 		   var image = document.getElementById('img');
-                image.src = imageData + '?' + Math.random();;
+                image.src = imageURI + '?' + Math.random();;
              
    		     
      	    var options = new FileUploadOptions();
