--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ function onError(err) {
 		    document.getElementById("content").style.display = "block";
    		    document.getElementById("content").style.visibility="true";
 		   var image = document.getElementById('img');
-		   image.src = imageData + '?' + Math.random();
+		   image.src = imageURI + '?' + Math.random();
     		 upl(imageURI);
 			 
             }
