--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@ function onError(err) {
 	    }
 
 	function win(r) {
-    alert("Image uploaded successfully!!");;
-		ajaxCal(); 
+    alert("Image uploaded successfully!!"); 
+	ajaxCal(); 	
 }
 //Failure callback
 function fail(error) {
