--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ function ajaxCal()
     if (this.readyState == 4) {
 	//   alert(this.status);
       if(this.status == 200 || this.status == 0){
-     		var rep1=this.responseText);
+     		var rep1=this.responseText;
 	         document.getElementById("footer").style.display = "none";
    		    document.getElementById("footer").style.visibility="false";
 		    document.getElementById("content").style.display = "none";
